tests/compiler/errors/selective_import_global_write_dependency.casa
# expect: UNDEFINED_GLOBAL
import "../fixtures/selective_import_global_lib.casa" { write_state }

write_state
